Overflow fix CSS

--- a/frontend/src/components/SpotBrowser/SpotBrowser.css
+++ b/frontend/src/components/SpotBrowser/SpotBrowser.css
@@ -35,8 +35,11 @@
   display: flex;
   flex-direction: row;
   margin-top: 10px;
+  margin-bottom: 10px;
   justify-content: space-between;
-  /* overflow-wrap: break-word; */
+  /* white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis */
 }
 
 .individual-spots {
